salesforce/force-app/main/default/objects/Issue_Information__c/Issue_Information__c.object-meta.xml
<CustomObject>
    <description>What the customer described. One per enquiry, hung off the Lead.</description>
    <label>Issue Information</label>
    <nameField>
        <displayFormat>ISS-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>