salesforce/force-app/main/default/objects/Issue_Information__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Which Salesforce credential the customer is working towards, by display name. Text rather than a picklist because Salesforce owns this vocabulary and retires entries from it; the accepted values live in the application&apos;s catalogue.</description>
    <label>Certification</label>
    <length>128</length>
    <type>Text</type>
</CustomField>