salesforce/force-app/main/default/objects/Issue_Information__c/fields/Certification_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam_Date__c</fullName>
    <description>The day the customer sits the exam, when it is already booked. A date, not a datetime: an exam date is the same calendar day in every time zone.</description>
    <label>Certification Exam Date</label>
    <type>Date</type>
</CustomField>