salesforce/force-app/main/default/objects/Issue_Information__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The customer&apos;s own words, redacted for credentials before it left the platform.</description>
    <label>Issue Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>