salesforce/force-app/main/default/objects/Issue_Information__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>What was asked for on THIS enquiry. The Lead carries the most recent; this keeps each one&apos;s own.</description>
    <label>Requested Duration (minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>