salesforce/force-app/main/default/objects/Issue_Information__c/fields/Help_Needed__c.field-meta.xml
<CustomField>
    <fullName>Help_Needed__c</fullName>
    <description>What kind of certification help was asked for. A multi-select so it stays countable in reports; the values match the application&apos;s own list exactly.</description>
    <label>Help Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Study plan</fullName>
            </value>
            <value>
                <fullName>Weak topics</fullName>
            </value>
            <value>
                <fullName>Hands-on practice</fullName>
            </value>
            <value>
                <fullName>Mock exams</fullName>
            </value>
            <value>
                <fullName>Retake after failing</fullName>
            </value>
            <value>
                <fullName>Exam-day strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>