salesforce/force-app/main/default/objects/Issue_Information__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The enquiry this issue belongs to. Lookup rather than master-detail because Salesforce does not allow Lead to be a master.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Issue Information</relationshipLabel>
    <relationshipName>Issue_Information</relationshipName>
    <type>Lookup</type>
</CustomField>