salesforce/force-app/main/default/objects/Issue_Information__c/fields/Platform_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Platform_Lead_Id__c</fullName>
    <description>Key this record is upserted on, so a retried sync updates rather than duplicates.</description>
    <externalId>true</externalId>
    <label>Platform Lead Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>