salesforce/force-app/main/default/objects/Issue_Information__c/fields/Preferred_Call_At__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Call_At__c</fullName>
    <description>When the customer asked to be called. Stored as an instant; Salesforce renders it in the viewer&apos;s own zone, which is why the customer&apos;s zone is kept beside it.</description>
    <label>Preferred Call Time</label>
    <type>DateTime</type>
</CustomField>