salesforce/force-app/main/default/objects/Issue_Information__c/fields/Preferred_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Timezone__c</fullName>
    <description>The IANA zone the customer chose. Needed to tell them the time they actually asked for rather than the viewer&apos;s translation of it.</description>
    <label>Customer Time Zone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>