salesforce/force-app/main/default/objects/Issue_Information__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>What kind of request this is. Instant and Long-Term are set by the platform from the customer&apos;s own choice; Scheduled and Certification based have no path through the form yet and are for manual use.</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instant</fullName>
                <default>true</default>
                <label>Instant</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Long-Term</fullName>
            </value>
            <value>
                <fullName>Certification based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>