salesforce/force-app/main/default/objects/Issue_Information__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>A short label for the engagement, given by the customer.</description>
    <label>Issue Title</label>
    <length>160</length>
    <type>Text</type>
</CustomField>